3d Transform to try and fix z-index of header

--- a/css/main.css
+++ b/css/main.css
@@ -434,7 +434,8 @@ header p {
 #homeFullScreen .container {
   position:fixed;
   z-index: 0;
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,1px);
+  transform: translate3d(0,0,1px);
 }
 
 .landing {
